hazelcast-addon-core-3/src/main/java/org/hazelcast/addon/hql/internal/antlr4/generated/HqlParser.java
// Generated from /Users/dpark/Work/git/Hazelcast/hazelcast-addon/src/main/resources/Hql.g4 by ANTLR 4.7.2
package org.hazelcast.addon.hql.internal.antlr4.generated;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class HqlParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		AND=1, AS=2, ASC=3, BETWEEN=4, BY=5, DELETE=6, DESC=7, DISTINCT=8, DOUBLE=9, 
		ENTRIES=10, FROM=11, ILIKE=12, IN=13, KEY=14, KEYS=15, LIKE=16, NOT=17, 
		NULL=18, NVL=19, OR=20, ORDER=21, REGEX=22, SET=23, SELECT=24, VALUE=25, 
		VALUES=26, WHERE=27, ABSOLUTE=28, COUNT=29, COUNT_BIG=30, LTRIM=31, MAX=32, 
		MIN=33, MINUTE=34, NUMBER=35, PARTITION=36, PATH=37, RTRIM=38, STDEV=39, 
		SUM=40, TRIM=41, TYPE=42, SPACE=43, COMMENT=44, LINE_COMMENT=45, DOUBLE_QUOTE_ID=46, 
		SQUARE_BRACKET_ID=47, DECIMAL=48, ID=49, STRING=50, BINARY=51, FLOAT=52, 
		REAL=53, EQUAL=54, GREATER=55, LESS=56, EXCLAMATION=57, PLUS_ASSIGN=58, 
		MINUS_ASSIGN=59, MULT_ASSIGN=60, DIV_ASSIGN=61, MOD_ASSIGN=62, AND_ASSIGN=63, 
		XOR_ASSIGN=64, OR_ASSIGN=65, DOT=66, UNDERLINE=67, AT=68, SHARP=69, DOLLAR=70, 
		LR_BRACKET=71, RR_BRACKET=72, COMMA=73, SEMI=74, COLON=75, STAR=76, DIVIDE=77, 
		MODULE=78, PLUS=79, MINUS=80, BIT_NOT=81, BIT_OR=82, BIT_AND=83, BIT_XOR=84;
	public static final int
		RULE_hql_file = 0, RULE_hql_clause = 1, RULE_dml_clause = 2, RULE_select_statement = 3, 
		RULE_end_statement = 4, RULE_expression = 5, RULE_constant_expression = 6, 
		RULE_subquery = 7, RULE_search_condition_list = 8, RULE_search_condition = 9, 
		RULE_search_condition_and = 10, RULE_or_condition = 11, RULE_and_condition = 12, 
		RULE_search_condition_not = 13, RULE_predicate = 14, RULE_lhs_expression = 15, 
		RULE_rhs_expression = 16, RULE_query_expression = 17, RULE_query_specification = 18, 
		RULE_select_clause = 19, RULE_order_by_clause = 20, RULE_order_by_expression = 21, 
		RULE_select_list = 22, RULE_select_list_elem = 23, RULE_from_clause = 24, 
		RULE_where_clause = 25, RULE_path_source = 26, RULE_path_source_item = 27, 
		RULE_set_type = 28, RULE_as_path_alias = 29, RULE_path_alias = 30, RULE_path_hint = 31, 
		RULE_column_alias_list = 32, RULE_column_alias = 33, RULE_expression_list = 34, 
		RULE_path_name = 35, RULE_path = 36, RULE_full_column_name = 37, RULE_column_name_list = 38, 
		RULE_column_name = 39, RULE_simple_name = 40, RULE_null_notnull = 41, 
		RULE_default_value = 42, RULE_constant = 43, RULE_number = 44, RULE_sign = 45, 
		RULE_id = 46, RULE_simple_id = 47, RULE_keywordsCanBeId = 48, RULE_comparison_operator = 49;
	private static String[] makeRuleNames() {
		return new String[] {
			"hql_file", "hql_clause", "dml_clause", "select_statement", "end_statement", 
			"expression", "constant_expression", "subquery", "search_condition_list", 
			"search_condition", "search_condition_and", "or_condition", "and_condition", 
			"search_condition_not", "predicate", "lhs_expression", "rhs_expression", 
			"query_expression", "query_specification", "select_clause", "order_by_clause", 
			"order_by_expression", "select_list", "select_list_elem", "from_clause", 
			"where_clause", "path_source", "path_source_item", "set_type", "as_path_alias", 
			"path_alias", "path_hint", "column_alias_list", "column_alias", "expression_list", 
			"path_name", "path", "full_column_name", "column_name_list", "column_name", 
			"simple_name", "null_notnull", "default_value", "constant", "number", 
			"sign", "id", "simple_id", "keywordsCanBeId", "comparison_operator"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, null, null, null, "'='", "'>'", "'<'", "'!'", "'+='", 
			"'-='", "'*='", "'/='", "'%='", "'&='", "'^='", "'|='", "'.'", "'_'", 
			"'@'", "'#'", "'$'", "'('", "')'", "','", "';'", "':'", "'*'", "'/'", 
			"'%'", "'+'", "'-'", "'~'", "'|'", "'&'", "'^'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "AND", "AS", "ASC", "BETWEEN", "BY", "DELETE", "DESC", "DISTINCT", 
			"DOUBLE", "ENTRIES", "FROM", "ILIKE", "IN", "KEY", "KEYS", "LIKE", "NOT", 
			"NULL", "NVL", "OR", "ORDER", "REGEX", "SET", "SELECT", "VALUE", "VALUES", 
			"WHERE", "ABSOLUTE", "COUNT", "COUNT_BIG", "LTRIM", "MAX", "MIN", "MINUTE", 
			"NUMBER", "PARTITION", "PATH", "RTRIM", "STDEV", "SUM", "TRIM", "TYPE", 
			"SPACE", "COMMENT", "LINE_COMMENT", "DOUBLE_QUOTE_ID", "SQUARE_BRACKET_ID", 
			"DECIMAL", "ID", "STRING", "BINARY", "FLOAT", "REAL", "EQUAL", "GREATER", 
			"LESS", "EXCLAMATION", "PLUS_ASSIGN", "MINUS_ASSIGN", "MULT_ASSIGN", 
			"DIV_ASSIGN", "MOD_ASSIGN", "AND_ASSIGN", "XOR_ASSIGN", "OR_ASSIGN", 
			"DOT", "UNDERLINE", "AT", "SHARP", "DOLLAR", "LR_BRACKET", "RR_BRACKET", 
			"COMMA", "SEMI", "COLON", "STAR", "DIVIDE", "MODULE", "PLUS", "MINUS", 
			"BIT_NOT", "BIT_OR", "BIT_AND", "BIT_XOR"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Hql.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public HqlParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class Hql_fileContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(HqlParser.EOF, 0); }
		public List<Hql_clauseContext> hql_clause() {
			return getRuleContexts(Hql_clauseContext.class);
		}
		public Hql_clauseContext hql_clause(int i) {
			return getRuleContext(Hql_clauseContext.class,i);
		}
		public Hql_fileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hql_file; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterHql_file(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitHql_file(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitHql_file(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Hql_fileContext hql_file() throws RecognitionException {
		Hql_fileContext _localctx = new Hql_fileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_hql_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==SELECT || _la==LR_BRACKET) {
				{
				{
				setState(100);
				hql_clause();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(106);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Hql_clauseContext extends ParserRuleContext {
		public Dml_clauseContext dml_clause() {
			return getRuleContext(Dml_clauseContext.class,0);
		}
		public Hql_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_hql_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterHql_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitHql_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitHql_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Hql_clauseContext hql_clause() throws RecognitionException {
		Hql_clauseContext _localctx = new Hql_clauseContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_hql_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(108);
			dml_clause();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Dml_clauseContext extends ParserRuleContext {
		public Select_statementContext select_statement() {
			return getRuleContext(Select_statementContext.class,0);
		}
		public Dml_clauseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dml_clause; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterDml_clause(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitDml_clause(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitDml_clause(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Dml_clauseContext dml_clause() throws RecognitionException {
		Dml_clauseContext _localctx = new Dml_clauseContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_dml_clause);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(110);
			select_statement();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Select_statementContext extends ParserRuleContext {
		public Query_expressionContext query_expression() {
			return getRuleContext(Query_expressionContext.class,0);
		}
		public End_statementContext end_statement() {
			return getRuleContext(End_statementContext.class,0);
		}
		public Select_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_select_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterSelect_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitSelect_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitSelect_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Select_statementContext select_statement() throws RecognitionException {
		Select_statementContext _localctx = new Select_statementContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_select_statement);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(112);
			query_expression();
			setState(114);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(113);
				end_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class End_statementContext extends ParserRuleContext {
		public TerminalNode SEMI() { return getToken(HqlParser.SEMI, 0); }
		public End_statementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_end_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterEnd_statement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitEnd_statement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitEnd_statement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final End_statementContext end_statement() throws RecognitionException {
		End_statementContext _localctx = new End_statementContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_end_statement);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(SEMI);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
	 
		public ExpressionContext() { }
		public void copyFrom(ExpressionContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class Binary_operator_expressionContext extends ExpressionContext {
		public Token op;
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public TerminalNode STAR() { return getToken(HqlParser.STAR, 0); }
		public TerminalNode DIVIDE() { return getToken(HqlParser.DIVIDE, 0); }
		public TerminalNode MODULE() { return getToken(HqlParser.MODULE, 0); }
		public TerminalNode PLUS() { return getToken(HqlParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(HqlParser.MINUS, 0); }
		public TerminalNode BIT_AND() { return getToken(HqlParser.BIT_AND, 0); }
		public TerminalNode BIT_XOR() { return getToken(HqlParser.BIT_XOR, 0); }
		public TerminalNode BIT_OR() { return getToken(HqlParser.BIT_OR, 0); }
		public Comparison_operatorContext comparison_operator() {
			return getRuleContext(Comparison_operatorContext.class,0);
		}
		public Binary_operator_expressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterBinary_operator_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitBinary_operator_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitBinary_operator_expression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Primitive_expressionContext extends ExpressionContext {
		public TerminalNode NULL() { return getToken(HqlParser.NULL, 0); }
		public ConstantContext constant() {
			return getRuleContext(ConstantContext.class,0);
		}
		public Primitive_expressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterPrimitive_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitPrimitive_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitPrimitive_expression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Bracket_expressionContext extends ExpressionContext {
		public TerminalNode LR_BRACKET() { return getToken(HqlParser.LR_BRACKET, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode RR_BRACKET() { return getToken(HqlParser.RR_BRACKET, 0); }
		public Bracket_expressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterBracket_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitBracket_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitBracket_expression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Unary_operator_expressionContext extends ExpressionContext {
		public Token op;
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public TerminalNode PLUS() { return getToken(HqlParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(HqlParser.MINUS, 0); }
		public Unary_operator_expressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterUnary_operator_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitUnary_operator_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitUnary_operator_expression(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class Column_ref_expressionContext extends ExpressionContext {
		public Full_column_nameContext full_column_name() {
			return getRuleContext(Full_column_nameContext.class,0);
		}
		public Column_ref_expressionContext(ExpressionContext ctx) { copyFrom(ctx); }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).enterColumn_ref_expression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof HqlListener ) ((HqlListener)listener).exitColumn_ref_expression(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof HqlVisitor ) return ((HqlVisitor<? extends T>)visitor).visitColumn_ref_expression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		return expression(0);
	}

	private ExpressionContext expression(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		ExpressionContext _localctx = new ExpressionContext(_ctx, _parentState);
		ExpressionContext _prevctx = _localctx;
		int _startState = 10;
		enterRecursionRule(_localctx, 10, RULE_expression, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(128);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				{
				_localctx = new Primitive_expressionContext(_localctx);
				_ctx = _localctx;
				_prevctx = _localctx;
